[package]
name = "poll_next_bug"
version = "0.1.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
futures-preview = "0.3.0-alpha.19"
futures-core-preview = "0.3.0-alpha.19"